[package]
name = "ausf"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["server", "http2"] }
hyper-util = { version = "0.1", features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mongodb = "3"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
anyhow = "1"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json"] }
regex = "1"
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "logging", "tls12"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"
tokio-stream = { version = "0.1", features = ["net"] }
jsonwebtoken = "9"
rand = "0.8"
serde_yaml = "0.9"
openapiv3 = "2"
jsonschema = "0.18"
url = "2"
